# chi-tech

./: .mailmap  CMakeLists.txt
ChiModules/: CMakeLists.txt
ChiModules/DiffusionSolver/: CMakeLists.txt
ChiModules/DiffusionSolver/Solver/: constrdestr.cc  diffusion_solver.h  main_initialize.cc
ChiModules/DiffusionSolver/lua/: diffusion_createsolver.cc  diffusion_execute.cc  diffusion_initialize.cc  diffusion_lua.cc  diffusion_lua.h  diffusion_setproperty.cc
ChiModules/LBKEigenvalueSolver/: CMakeLists.txt  lbkes_k_eigenvalue_solver.h
ChiModules/LBKEigenvalueSolver/IterativeMethods/: lbkes_power_iteration.cc
ChiModules/LBKEigenvalueSolver/lua/: lbkes_createsolver.cc  lbkes_execute.cc  lbkes_initialize.cc  lbkes_lua_utils.cc  lbkes_lua_utils.h  lbkes_setproperty.cc
ChiModules/LBSAdjointSolver/: CMakeLists.txt  lbsadj_solver.h  lbsadj_solver_00_constrdestr.cc
ChiModules/LBSAdjointSolver/ResponseFunction/: lbs_adj_response_function.cc
ChiModules/LBSAdjointSolver/lua/: lbsadj_lua_addresponsefunc.cc  (+6 more)
ChiModules/LBSCurvilinear/: CMakeLists.txt  lbs_curvilinear_solver.cc  lbs_curvilinear_solver.h
ChiModules/LinearBoltzmannSolver/: CMakeLists.txt  lbs_00_constrdestr.cc  lbs_01_main_initialize.cc  lbs_01d_init_spat_discr.cc  lbs_02_main_execute.cc  lbs_03a_compsweeporder.cc  lbs_03b_initfluds.cc  lbs_03ca_angleagg_single.cc  lbs_03cb_angleagg_polar.cc  lbs_03cc_angleagg_azimuthal.cc  lbs_03d_wgdsa.cc  lbs_03e_tgdsa.cc  lbs_03f_resetswporderings.cc  lbs_linear_boltzmann_solver.h  lbs_structs.h
ChiModules/lua/: chi_modules_lua.cc  chi_modules_lua.h
(+191 files in other folders)
